Major Bug Patch
-Fixed missing counter function on mobile and chrome
-Added Gradient Animations to charts to extend effect of details
-Cleaned up text that was hard to read

--- a/mobile/m-chart_styler.css
+++ b/mobile/m-chart_styler.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @font-face {
   font-family: Digital3;
-  src: url('fonts/UAV-OSD-Sans-Mono.ttf');
+  src: url('../fonts/UAV-OSD-Sans-Mono.ttf');
 }
 table{
 	width:100%;
@@ -45,12 +45,29 @@ td{
 	background-color:red;
 }
 .okay{
+	background: linear-gradient(-90deg, rgb(255,205,0), #c19b00, rgb(255,205,0));
 	padding-top: 4px;
 	padding-left:4px;
-	background-color:rgb(255,205,0);
+	background-size: 200% 400%;
+	animation: gradientokay 1s infinite;
+	animation-timing-function:linear;
+	height: 100vh;
 }
+
+@keyframes gradientokay {
+	0%   {background-position: 200% 50%;}
+	100%  {background-position: 0% 50%;}
+}
+@keyframes gradient {
+	0%   {background-position: 0% 50%;}
+	100%  {background-position: 140% 50%;}
+}
+
 .perfect{
+	background: linear-gradient(-90deg, rgb(60,255,0), #e1ffd9, #33e100, rgb(60,255,0));
 	padding-top: 4px;
 	padding-left:4px;
-	background-color:rgb(60,255,0);
+	background-size: 400% 400%;
+	animation: gradient 2s infinite;
+	height: 100vh;
 }
