--- a/mobile/m-styler.css
+++ b/mobile/m-styler.css
@@ -14,7 +14,7 @@
 }
 @font-face {
   font-family: Digital4;
-  src: url('../fonts/Linebeam.ttf');
+  src: url('../fonts/MusticaPro-SemiBold.otf');
 }
 
 
